# search_engine

./: .gitignore  AvlTree.h  CMakeLists.txt  DocumentProcessor.cpp  DocumentProcessor.h  catch.hpp  doc.cpp  doc.h  documentation.md  indexHandler.cpp  indexHandler.h  porter2_stemmer.cpp  porter2_stemmer.h  rapidJSONExample.cpp  test.cpp  userInterface.cpp  userInterface.h  valgrindWithPersistenceAVL.txt
rapidjson/: document.h  reader.h
rapidjson/error/: error.h
sample_data/coll_2/: news_0064572.json
